--- a/views/404.html
+++ b/views/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Gang Shivam Bansal here :)</title>
-    <p>Hello Gang Shivam Bansal here :)</p>
+    <title></title>
+    <p>OOPPPPSSSS 404 Not Found</p>
 </head>
 <body>
     
